Refactor stream collection to use toList()
Replaced usage of Collectors.toList() with the more concise toList() method in CandidateServiceImpl and EntityMapper. Also updated interviewer selection for backward compatibility to use getFirst() instead of get(0).